--- a/projects/ngx-carousel/package.json
+++ b/projects/ngx-carousel/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-carousel",
-  "version": "0.0.1",
+  "name": "@gns088/ngx-carousel",
+  "version": "1.0.1",
   "peerDependencies": {
     "@angular/common": "^11.2.5",
     "@angular/core": "^11.2.5"
