--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx-carousel-lib",
   "version": "0.0.0",
+  "homepage": "https://gns088.github.io/ngx-carousel",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -14,7 +15,9 @@
     "build:ssr": "yarn run build:prod && ng run ngx-carousel-lib:server:production",
     "prerender": "ng run ngx-carousel-lib:prerender",
     "lib:build": "ng build ngx-carousel --prod",
-    "lib:deploy": "npm run lib:build && cd ./dist/ngx-carousel/ && npm pack && npm publish --access public"
+    "lib:deploy": "npm run lib:build && cd ./dist/ngx-carousel/ && npm pack && npm publish --access public",
+    "preghdeploy": "yarn prerender",
+    "ghdeploy": "gh-pages -d dist/ngx-carousel-lib/browser"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +32,7 @@
     "@angular/router": "~11.2.5",
     "@nguniversal/express-engine": "^11.2.1",
     "express": "^4.15.2",
+    "gh-pages": "^3.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
