--- a/package.json
+++ b/package.json
@@ -16,23 +16,27 @@
     "prerender": "ng run ngx-carousel-lib:prerender",
     "lib:build": "ng build ngx-carousel --prod",
     "lib:deploy": "npm run lib:build && cd ./dist/ngx-carousel/ && npm pack && npm publish --access public",
-    "preghdeploy": "yarn prerender",
+    "preghdeploy": "yarn lib:build && yarn prerender",
     "ghdeploy": "gh-pages -d dist/ngx-carousel-lib/browser"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.5",
+    "@angular/cdk": "^12.2.4",
     "@angular/common": "~11.2.5",
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~11.2.5",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/platform-server": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@nguniversal/express-engine": "^11.2.1",
+    "bootstrap": "^4.5.3",
     "express": "^4.15.2",
     "gh-pages": "^3.2.3",
+    "ngx-bootstrap": "7.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
