--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod",
-    "test": "ng test",
+    "test": "ng test  --codecoverage",
+    "test:lib": "ng test ngx-carousel",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev:ssr": "ng run ngx-carousel-lib:serve-ssr",
