--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ngx-carousel-lib",
   "version": "0.0.0",
   "homepage": "https://gns088.github.io/ngx-carousel",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gns088/ngx-carousel.git"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
