--- a/projects/ngx-carousel/package.json
+++ b/projects/ngx-carousel/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@gns088/ngx-carousel",
   "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gns088/ngx-carousel.git"
+  },
   "peerDependencies": {
     "@angular/common": "^11.2.5",
     "@angular/core": "^11.2.5"
